--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,7 @@ ul.navigation li.email a:hover{
 }
 
 
-section.home, section.about, section.projects{
+section.home, section.about, section.projects, section.book{
     border-left: 4px solid #292F34;
     padding-left: 30px;
 }
@@ -376,4 +376,57 @@ img.thumbnail:hover {
         transform: scale(1.1);
     }
 }
+
+
+
+#image-frame {
+    position: relative;
+
+    margin:auto;
+
+    width: auto;
+    max-width: 350px;
+    height: auto;
+    max-height:400px;
+    overflow: hidden;
+    border-radius: 20px;
+
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+}
+#image-frame img {
+    object-fit: cover;
+    transition:0.3s;
+    position: relative;
+    height:450px; /*optional, if image is too big*/
+}
+
+#image-frame:hover img {
+    transform: scale(1.1);
+}
+
+.text-area {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.50);
+
+    transition: 0.3s;
+    color: #FFFF;
+
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+    align-items: center;
+    justify-content: center;
+}
+.text-area h1{
+    margin: 0;
+}
+.text-area p {
+    margin: 0;
+    font-size: 1em;
+}
+.text-area:hover{opacity:0;}
 
